<!--
  ~ /*
  ~ * Created by Darthcow
  ~ * Last modified 25/10/19 12:22
  ~ */
  -->



<resources>
    <string name="app_name">RSS Downloader</string>
    <string name="free_menu_text">Free Apps</string>
    <string name="paid_menu_text">Paid Apps</string>
    <string name="songs_menu_text">Songs</string>
    <string name="movies_menu_text">Movies</string>
    <string name="summary_sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_sample_text">Item Title</string>
    <string name="author_sample_text">Author name</string>
    <string name="item_image_description">Item Image</string>
</resources>
