<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ * Created by Darthcow
  ~ * Last modified 25/10/19 12:22
  ~ */
  -->

<!--
  ~ /*
  ~ * Created by Julio Cesar Almeida
  ~ * Last modified 16/10/19 08:57
  ~ */
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/listSize"
        android:title="List Size">
        <menu>
            <group
                android:id="@+id/groupSize"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/size10"
                    android:checked="true"
                    android:title="10 items" />
                <item
                    android:id="@+id/size50"
                    android:title="50 items" />
                <item
                    android:id="@+id/size100"
                    android:title="100 items" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menuFree"
        android:title="@string/free_menu_text" />
    <item
        android:id="@+id/menuPaid"
        android:title="@string/paid_menu_text" />
    <item
        android:id="@+id/menuMovies"
        android:title="@string/movies_menu_text" />
    <item
        android:id="@+id/menuSongs"
        android:title="@string/songs_menu_text" />
</menu>