<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ * Created by Darthcow
  ~ * Last modified 25/10/19 12:22
  ~ */
  -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/title_sample_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/itemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/item_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArtist"
        tools:srcCompat="@tools:sample/backgrounds/scenic[5]" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Release Date:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintTop_toTopOf="@+id/itemImage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Genre:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemImage"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/summary_sample_text"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="@+id/itemImage"
        app:layout_constraintTop_toBottomOf="@+id/itemImage" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/author_sample_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Rights"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tvSummary"
        app:layout_constraintStart_toStartOf="@+id/tvSummary"
        app:layout_constraintTop_toBottomOf="@+id/tvSummary" />

</androidx.constraintlayout.widget.ConstraintLayout>